--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-spring.application.name=team-musubi
-spring.datasource.url=jdbc:mysql://localhost:3306/teammusubi
-spring.datasource.username=root
-spring.datasource.password={password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+spring.profiles.include=aws
