--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-application-aws.properties
+/src/main/resources/application-aws.properties
 
 .idea
 *.iws
