--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,8 +1,10 @@
 spring.application.name=team-musubi
 spring.datasource.url=jdbc:mysql://localhost:3306/teammusubi
 spring.datasource.username=root
-spring.datasource.password=Password@1234
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
 
